--- a/gradle.properties
+++ b/gradle.properties
@@ -4,17 +4,17 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.5
-yarn_mappings=1.21.5+build.1
+minecraft_version=1.21.7
+yarn_mappings=1.21.7+build.6
 loader_version=0.16.14
-loom_version=1.10-SNAPSHOT
+loom_version=1.11-SNAPSHOT
 
 # Mod Properties
-mod_version=1.0.1
+mod_version=1.0.2+1.21.7
 maven_group=theooolone.showplrnametags
 archives_base_name=show-player-nametags
 
 # Dependencies
-fabric_version=0.126.0+1.21.5
-modmenu_version=14.0.0-rc.2
-cloth_config_version=18.0.145
+fabric_version=0.128.2+1.21.7
+modmenu_version=15.0.0-beta.3
+cloth_config_version=19.0.147
