--- a/gradle.properties
+++ b/gradle.properties
@@ -4,17 +4,17 @@ org.gradle.parallel=true
 
 # Fabric Properties
 # check these on https://fabricmc.net/develop
-minecraft_version=1.21.7
-yarn_mappings=1.21.7+build.6
-loader_version=0.16.14
+minecraft_version=1.21.8
+yarn_mappings=1.21.8+build.1
+loader_version=0.17.2
 loom_version=1.11-SNAPSHOT
 
 # Mod Properties
-mod_version=1.0.2+1.21.7
+mod_version=1.1.0
 maven_group=theooolone.showplrnametags
 archives_base_name=show-player-nametags
 
 # Dependencies
-fabric_version=0.128.2+1.21.7
+fabric_version=0.132.0+1.21.8
 modmenu_version=15.0.0-beta.3
 cloth_config_version=19.0.147
